--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -3242,7 +3242,7 @@ $form-icon-btn: (
 }
 
 // Dashboard
-.dashbrd-grid-widget-container {
+.dashbrd-grid-container {
 	position: relative;
 	margin: -4px;
 }
@@ -3342,7 +3342,7 @@ $form-icon-btn: (
 
 .dashbrd-grid-widget-content {
 	flex: 1;
-	overflow-y: auto;
+	overflow: auto;
 	@extend %webkit-scrollbar;
 
 	.list-table {
@@ -3384,7 +3384,7 @@ $form-icon-btn: (
 	position: absolute;
 }
 
-.dashbrd-grid-widget-padding {
+.dashbrd-grid-widget-container {
 	display: flex;
 	flex-grow: 1;
 	flex-direction: column;
@@ -3742,19 +3742,6 @@ $form-icon-btn: (
 
 	&:link {
 		border: none;
-	}
-
-	&:focus {
-
-		&:after {
-			content: "";
-			background: rgba($blue, .35);
-			height: 2px;
-			position: absolute;
-			left: 0;
-			right: 0;
-			bottom: -2px;
-		}
 	}
 }
 
@@ -4441,6 +4428,10 @@ input.open-modal-code-editor {
 	}
 }
 
+.svg-graph {
+	display: block;
+}
+
 .svg-single-item-graph-legend,
 .svg-single-two-items-graph-legend,
 .svg-graph-legend {
@@ -4451,13 +4442,14 @@ input.open-modal-code-editor {
 	overflow-y: hidden;
 	white-space: normal;
 	margin: 0 10px;
+	line-height: $svg-legend-line-height;
 
 	div {
 		display: inline-block;
 		margin: 0 4px;
 		font-size: 12px;
-		line-height: $svg-legend-line-height;
-		vertical-align: middle;
+		line-height: 1.1;
+		vertical-align: bottom;
 		min-width: 120px;
 		overflow: hidden;
 		white-space: nowrap;
@@ -5710,6 +5702,7 @@ tr.cursor-move {
 
 .flickerfreescreen {
 	position: relative;
+	overflow: hidden;
 }
 
 .graph-wrapper {
